[tool.poetry]
name = "subscrforge-wrapper"
version = "0.1.0"
description = "An asynchronised wrapper for creator subscription platforms"
authors = ["Satoshi Jek <jks15satoshi@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "wrapper"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
httpx = { version = "^0.23.1", extras = ["http2"] }
pydantic = "^1.10.2"
lxml = "^4.9.2"
babel = "^2.11.0"
natsort = "^8.2.0"
luqum = "^0.12.1"
httpx-cache = "^0.7.0"
aiofile = "^3.8.1"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
black = "^23.1.0"
isort = "^5.11.4"
unasync = "^0.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.0.15"
mkdocs-static-i18n = "^0.53"
mkdocs-exclude = "^1.0.2"
mike = "^1.1.2"

[tool.black]
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = ["pydantic", "lxml"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
